--- a/style.css
+++ b/style.css
@@ -38,3 +38,9 @@ html {
 .pusheen-container {
   text-align: center;
 }
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
