--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html {
   height: 100px; 
 }
 
-.pusheen-container {
+.pikachu-container {
   text-align: center;
 }
 
@@ -56,5 +56,5 @@ html {
 
 .on {
   width: 100%;
-  transition: 2s;
+  transition: 1s;
 }
