tests for animation and pikachu added

--- a/src/style.css
+++ b/src/style.css
@@ -32,11 +32,13 @@ html {
   display: inline-block;
   border-radius: 50%;
   width: 100px;
-  height: 100px; 
+  height: 100px;
 }
 
-.pikachu-container {
+#pikachu-container {
   text-align: center;
+  height: 100px;
+  width: 100px;
 }
 
 .title {
